added old colors
 added old zurb colors from style guide: http://d.pr/i/uoGb

--- a/scss/foundation/_settings.scss
+++ b/scss/foundation/_settings.scss
@@ -33,6 +33,14 @@ $black: #000 !default;
 $white: #fff !default;
 $shinyEdge: rgba(#fff, .5) !default;
 $darkEdge: rgba(#000, .2) !default;
+// mgcross: added old zurb colors from style guide: http:/d.pr/i/uoGb
+$greenColor: #b8d30b !default;
+$blueColor: #2daebf !default;
+$magentaColor: #a9014b !default;
+$redColor: #e33100 !default;
+$orangeColor: #ff5c00 !default;
+$orangellowColor: #fc9200 !default;
+//end mgcross
 
 // Font Settings
 
